--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,7 @@ jobs:
           sudo apt-get update -qq
           sudo apt-get install -qq curl
           curl -fsSL https://raw.githubusercontent.com/kou/arrow/e49d8ae15583ceff03237571569099a6ad62be32/ci/scripts/util_free_space.sh | bash
+
       - name: Setup Build Environment
         run: |
           sudo apt-get update
@@ -34,6 +35,7 @@ jobs:
             python3-pip curl git zip unzip gcc g++ make ninja-build file \
             bc bison flex libssl-dev libelf-dev wget build-essential \
             python3-dev python3-setuptools rsync ccache cmake libdw-dev zlib1g-dev
+
       - name: Setup ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
@@ -49,12 +51,14 @@ jobs:
           echo "$HOME/.bin" >> $GITHUB_PATH
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
+
       - name: Configure Build Directory
         run: |
           ROOT_DIR="${ROOT_DIR_PREFIX}-$(date +'%Y-%m-%d-%I-%M-%p')-release"
           echo "ROOT_DIR=${ROOT_DIR}" >> $GITHUB_ENV
           mkdir -p "builds/${ROOT_DIR}"
           cd "builds/${ROOT_DIR}"
+
       - name: Clone Required Repositories
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
@@ -66,6 +70,16 @@ jobs:
           for repo in "${repos[@]}"; do
             git clone $repo || { echo "Failed to clone $repo"; exit 1; }
           done
+
+      - name: Clone Oplus Build Kernel S Repository
+        working-directory: builds/${{ env.ROOT_DIR }}
+        run: |
+          # Ensure the destination directory exists
+          mkdir -p kernel_platform/oplus/build
+          cd kernel_platform/oplus/build
+          # Replace the URL below with the actual repository URL for oplus_build_kernel.s
+          git clone https://github.com/YourUsername/oplus_build_kernel.s.git || { echo "Failed to clone oplus_build_kernel.s repository"; exit 1; }
+
       - name: Setup Kernel Source
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
@@ -74,6 +88,7 @@ jobs:
           repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b oneplus/sm8650 -m oneplus_13r.xml --depth=1 || { echo "Failed to initialize repo"; exit 1; }
           repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags || { echo "Failed to sync repo"; exit 1; }
           rm -rf ./kernel_platform/common/android/abi_gki_protected_exports_*
+
       - name: Setup KernelSU
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
@@ -83,13 +98,14 @@ jobs:
           KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
           echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
           sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${KSU_VERSION}/" Makefile
+
       - name: Setup SUSFS
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
           set -euxo pipefail
           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android14-6.1
           git clone https://github.com/WildPlusKernel/kernel_patches.git
-          # Copy files
+          # Copy patch files
           cp susfs4ksu/kernel_patches/50_add_susfs_in_gki-android14-6.1.patch ./common/
           cp kernel_patches/next/0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch ./KernelSU-Next/
           cp kernel_patches/next/syscall_hooks.patch ./common/
@@ -100,12 +116,12 @@ jobs:
           patch -p1 < 0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch || true
           cd ../common
           patch -p1 < 50_add_susfs_in_gki-android14-6.1.patch || true
-          # Copy and apply hide_stuff patch
           if [ -f kernel_patches/69_hide_stuff.patch ]; then
             cp kernel_patches/69_hide_stuff.patch ./
             patch -p1 -F 3 < 69_hide_stuff.patch || true
           fi
           patch -p1 -F 3 < syscall_hooks.patch || true
+
       - name: Configure Kernel
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
@@ -128,10 +144,11 @@ jobs:
             "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y"
             "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y"
             "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y"
-            "CONFIG_KSU_SUSFS_SUS_SU=n"
+            "CONFIG_KSU_SUS_SU=n"
             # Filesystem
             "CONFIG_TMPFS_XATTR=y"
             "CONFIG_TMPFS_POSIX_ACL=y"
+            "CONFIG_USB_OTG=y"
             # Network
             "CONFIG_IP_NF_TARGET_TTL=y"
             "CONFIG_IP6_NF_TARGET_HL=y"
@@ -141,7 +158,7 @@ jobs:
             "CONFIG_SMP=y"
             "CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y"
             "CONFIG_MSM_PERFORMANCE=y"
-            # power consumption
+            # Power Consumption
             "CONFIG_NO_HZ_IDLE=y"
             "CONFIG_PM_SLEEP_SMP=y"
           )
@@ -149,6 +166,7 @@ jobs:
             echo "$CONFIG" >> ./common/arch/arm64/configs/gki_defconfig
           done
           sed -i '2s/check_defconfig//' ./common/build.config.gki
+
       - name: Run sed Commands
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
@@ -158,22 +176,35 @@ jobs:
           sed -i 's/-dirty//' ./msm-kernel/scripts/setlocalversion
           sed -i 's/-dirty//' ./external/dtc/scripts/setlocalversion
           sed -i 's/-dirty//' ./build/kernel/kleaf/workspace_status_stamp.py || echo "No workspace_status_stamp.py!"
-      - name: Build Kernel
-        working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/
+
+      - name: Verify Build Script Location
+        working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v
+        shell: bash
         run: |
-          cd kernel_platform
-          mkdir out
-          export PATH="/usr/lib/ccache:$PATH"
-          ./build_with_bazel.py \
-            -t pineapple \
-            gki \
-            --jobs=$(nproc --all) \
-            --verbose_failures \
-            --config=stamp \
-            --user_kmi_symbol_lists=//msm-kernel:android/abi_gki_aarch64_qcom \
-            --ignore_missing_projects \
-            --lto=full \
-            -o "$(pwd)/out" || { echo "Bazel build failed"; exit 1; }
+          if [ -f "$GITHUB_WORKSPACE/build_with_bazel.py" ]; then
+            echo "✅ Manual build_with_bazel.py found in the root of the workflow repository."
+            export BUILD_SCRIPT_PATH="$GITHUB_WORKSPACE/build_with_bazel.py"
+          elif [ -f "$GITHUB_WORKSPACE/build/build_with_bazel.py" ]; then
+            echo "✅ Manual build_with_bazel.py found under build/ in the workflow repository."
+            export BUILD_SCRIPT_PATH="$GITHUB_WORKSPACE/build/build_with_bazel.py"
+          else
+            echo "❌ Error: Manual build_with_bazel.py not found in either the root or ./build directory of the workflow repository!"
+            exit 1
+          fi
+          echo "Using BUILD_SCRIPT_PATH: $BUILD_SCRIPT_PATH"
+
+      - name: Run Oplus Build Kernel Script
+        working-directory: builds/${{ env.ROOT_DIR }}
+        run: |
+          if [ -f "kernel_platform/oplus/build/oplus_build_kernel.sh" ]; then
+            echo "✅ Found oplus_build_kernel.sh, executing..."
+            chmod +x kernel_platform/oplus/build/oplus_build_kernel.sh
+            ./kernel_platform/oplus/build/oplus_build_kernel.sh || { echo "❌ oplus_build_kernel.sh failed"; exit 1; }
+          else
+            echo "❌ oplus_build_kernel.sh not found!"
+            exit 1
+          fi
+
       - name: Create ZIP Package
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
@@ -194,9 +225,10 @@ jobs:
           }
           ls -lh "../$ZIP_NAME"
           echo "zip_name=$ZIP_NAME" >> $GITHUB_ENV
-      
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: kernel-${{ env.ROOT_DIR }}
           path: builds/${{ env.ROOT_DIR }}/*.zip
+
