--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 180  # Increase timeout to 3 hours
 
     steps:
     - name: Checkout repository
