--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -95,16 +95,16 @@ jobs:
           "CONFIG_KSU_SUSFS_SUS_MOUNT=y"
           "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT=y"
           "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y"
-          "CONFIG_KSU_SUSFS_SUS_KSTAT=y"
-          "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=n"
-          "CONFIG_KSU_SUSFS_TRY_UMOUNT=y"
-          "CONFIG_KSU_SUSFS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT=y"
-          "CONFIG_KSU_SUSFS_SPOOF_UNAME=y"
-          "CONFIG_KSU_SUSFS_ENABLE_LOG=y"
-          "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y"
-          "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y"
-          "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y"
-          "CONFIG_KSU_SUS_SU=n"
+          "CONFIG_KSU_SUS_KSTAT=y"
+          "CONFIG_KSU_SUS_OVERLAYFS=n"
+          "CONFIG_KSU_SUS_TRY_UMOUNT=y"
+          "CONFIG_KSU_SUS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT=y"
+          "CONFIG_KSU_SUS_SPOOF_UNAME=y"
+          "CONFIG_KSU_SUS_ENABLE_LOG=y"
+          "CONFIG_KSU_SUS_HIDE_KSU_SUS_SYMBOLS=y"
+          "CONFIG_KSU_SUS_SPOOF_CMDLINE_OR_BOOTCONFIG=y"
+          "CONFIG_KSU_SUS_OPEN_REDIRECT=y"
+          "CONFIG_KSU_SU=n"
           "CONFIG_TMPFS_XATTR=y"
           "CONFIG_TMPFS_POSIX_ACL=y"
           "CONFIG_IP_NF_TARGET_TTL=y"
