--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
 
     env:
       ROOT_DIR: build_directory
-      ANYKERNEL_BRANCH: your_anykernel_branch
+      ANYKERNEL_BRANCH: main  # Updated to use the main branch
       SUSFS_BRANCH: gki-android14-6.1
       KERNEL_PATCH_BRANCH: main
       CONFIG: configuration_name
@@ -28,9 +28,9 @@ jobs:
 
     - name: Clone repositories
       run: |
-        git clone https://github.com/TheWildJames/AnyKernel3.git -b "$ANYKERNEL_BRANCH"
+        git clone https://github.com/Kernel-SU/AnyKernel3.git --depth=1
         git clone https://gitlab.com/simonpunk/susfs4ksu.git -b "$SUSFS_BRANCH"
-        git clone https://github.com/TheWildJames/kernel_patches.git -b "$KERNEL_PATCH_BRANCH"
+        git clone https://github.com/WildPlusKernel/kernel_patches.git
 
     - name: Initialize and Sync Kernel Source
       run: |
@@ -61,7 +61,7 @@ jobs:
         cp ../../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ inputs.android_version }}-${{ inputs.kernel_version }}.patch ./common/
         cp ../../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-
+        
         cd ./KernelSU-Next
         echo "Applying next SUSFS patches..."
         cp ../../../kernel_patches/next/0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch ./
