--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,9 +40,12 @@ jobs:
         mkdir -p "$CONFIG"
         cd "$CONFIG"
         
-        echo "Initializing and syncing kernel source..."
-        repo init -u https://github.com/OnePlusOSS/kernel_manifest/blob/oneplus/sm8650/oneplus_13r.xml --repo-rev=v2.16 --depth=1
-        repo --trace sync -c -j$(nproc --all) --no-tags --fail-fast
+        - name: Initialize and sync kernel source
+        run: |
+          cd "$CONFIG"
+          echo "Initializing and syncing kernel source..."
+          repo init -u https://github.com/OnePlusOSS/kernel_manifest -b oneplus/sm8650/oneplus_13r --repo-rev=v2.16 --depth=1
+          repo sync -c -j$(nproc --all) --no-tags --fail-fast
 
     - name: Add KernelSU
       run: |
