--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -195,7 +195,7 @@ jobs:
             --config=stamp \
             --user_kmi_symbol_lists=//msm-kernel:android/abi_gki_aarch64_qcom \
             --ignore_missing_projects \
-            --lto=full \ # Using ThinLTO suitable for ubuntu-latest
+            --lto=thin \ # Using ThinLTO suitable for ubuntu-latest
             -o "$(pwd)/out" || { echo "Bazel build failed"; exit 1; }
           echo "Kernel build finished."
 
